[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/components/hand_area/hand_area.gd" id="1_hand"]

[node name="HandArea" type="Control"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hand")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 0.9)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "员工卡牌"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ContentVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="ActiveSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ActiveLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/ActiveSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)
text = "在岗员工"

[node name="ActiveContainer" type="HFlowContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/ActiveSection"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="ReserveSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ReserveLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/ReserveSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.7, 0.5, 1)
text = "待命区"

[node name="ReserveContainer" type="HFlowContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/ReserveSection"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="BusySection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="BusyLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/BusySection"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.8, 0.5, 0.5, 1)
text = "忙碌中"

[node name="BusyContainer" type="HFlowContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/BusySection"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
